# crossagentmemory

./: .gitignore  CHANGELOG.md  CLAUDE.md  LAUNCH.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
agentmemory/: __init__.py  backup.py  cli.py  config.py  core.py  dashboard.py  decay.py  export.py  mcp_server.py  recall.py  semantic.py  team_sync.py
agentmemory/backends/: base.py  migrations.py  postgres.py  sqlite.py
crossagentmemory/: __init__.py  backup.py  cli.py  config.py  core.py  dashboard.py  export.py  hooks.py  importers.py  llm.py  mcp_server.py  recall.py  semantic.py  server.py  shell.py  social.py  sync.py  team_sync.py
crossagentmemory/backends/: __init__.py  base.py  migrations.py  postgres.py  sqlite.py
docs/: GUIDE.md
tests/: test_auto_capture.py  test_backends.py  test_backup.py  test_chroma_backend.py  test_cloud_sync.py  test_config.py  test_core.py  test_daemon.py  test_dashboard.py  test_decay.py  test_fts5.py  test_graph.py  test_importers.py  test_llm.py  test_llm_features.py  test_mcp_server.py  test_migrate.py  test_migrations.py  test_semantic.py  test_server.py  test_shell.py  test_social.py  test_storage_backends.py  test_summarize.py  test_team_sync.py
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts
